reports/file_01.log
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.7.12/x64/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/opt/hostedtoolcache/Python/3.7.12/x64/lib/python3.7/site-packages/nbclient/client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/hostedtoolcache/Python/3.7.12/x64/lib/python3.7/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/hostedtoolcache/Python/3.7.12/x64/lib/python3.7/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/opt/hostedtoolcache/Python/3.7.12/x64/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/opt/hostedtoolcache/Python/3.7.12/x64/lib/python3.7/site-packages/nbclient/client.py", line 560, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/opt/hostedtoolcache/Python/3.7.12/x64/lib/python3.7/site-packages/nbclient/client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/opt/hostedtoolcache/Python/3.7.12/x64/lib/python3.7/site-packages/nbclient/client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from sklearn.linear_model import ElasticNet

fig, axes = plt.subplots(nrows=2, ncols=1, figsize=(6, 10))

l1_ratios = [0.1, 0.9]
for ax, l1_ratio in zip(axes, l1_ratios):
    modele = ElasticNet(alpha=10, l1_ratio=l1_ratio)
    cv = RepeatedKFold(n_splits=5, n_repeats=100, random_state=0)
    cv_results = cross_validate(
        modele, X, y, cv=cv, return_train_score=True, return_estimator=True
    )

    coef = pd.DataFrame(
        [modele_cv.coef_ for modele_cv in cv_results["estimator"]],
        columns=nom_colonnes,
    )
    coef.plot.box(vert=False, whis=100, ax=ax)
    ax.set_title(f"Coefficients for {l1_ratio=}")
fig.subplots_adjust(hspace=0.4)
_ = fig.suptitle("Effect of the parameter l1_ratio\n dans ElasticNet", y=1.05)
------------------

[0;36m  File [0;32m"<fstring>"[0;36m, line [0;32m1[0m
[0;31m    (l1_ratio=)[0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<fstring>, line 1)

